Fix for the slideshow overlapping text issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1527,6 +1527,7 @@ footer .widget.profile .twitter span {
    =============================== */
 .widget.responsiveslideshow .slideshow-image-list {
     height: 500px;
+    min-height:initial;
     background-color: @color-swatch2;
 }
 
@@ -1777,6 +1778,7 @@ footer .widget.profile .twitter span {
     .widget.responsiveslideshow .slideshow-image-list, 
     .widget.responsiveslideshow .slideshow-widget {
         height:400px;
+        min-height:initial;
     }
 
 }
@@ -1913,8 +1915,10 @@ footer .widget.profile .twitter span {
     display:none;
   }
 
-  .widget.responsiveslideshow .slideshow-image-list, .widget.responsiveslideshow .slideshow-widget {
+  .widget.responsiveslideshow .slideshow-image-list,
+  .widget.responsiveslideshow .slideshow-widget {
       height: 200px;
+      min-height:initial;
   }
 
      /* GALLERY */
